[gd_scene load_steps=15 format=3 uid="uid://c63l38ki43ymp"]

[ext_resource type="Script" path="res://Enemies/enemy_bossMetalHen.gd" id="1_uw6vv"]
[ext_resource type="Texture2D" uid="uid://dg6jtka113eq1" path="res://Assets/Graphics/sprites/sprites_enemies.png" id="2_i4wkj"]
[ext_resource type="AudioStream" uid="uid://dktvinfcsfjdf" path="res://Assets/Sounds/sfx/robot_damage.wav" id="3_tkw8o"]
[ext_resource type="AudioStream" uid="uid://bh4ltljsggx0d" path="res://Assets/Sounds/sfx/effect_explosion2.wav" id="4_fmm6y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_efqsc"]
atlas = ExtResource("2_i4wkj")
region = Rect2(810, 984, 162, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymql8"]
atlas = ExtResource("2_i4wkj")
region = Rect2(648, 984, 162, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_mo0mn"]
atlas = ExtResource("2_i4wkj")
region = Rect2(648, 984, 162, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_rp15q"]
atlas = ExtResource("2_i4wkj")
region = Rect2(324, 984, 162, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_wonci"]
atlas = ExtResource("2_i4wkj")
region = Rect2(486, 984, 162, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_avk3w"]
atlas = ExtResource("2_i4wkj")
region = Rect2(0, 984, 162, 164)

[sub_resource type="AtlasTexture" id="AtlasTexture_o558e"]
atlas = ExtResource("2_i4wkj")
region = Rect2(162, 984, 162, 164)

[sub_resource type="SpriteFrames" id="SpriteFrames_5cx1g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_efqsc")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymql8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efqsc")
}],
"loop": true,
"name": &"damage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mo0mn")
}],
"loop": false,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rp15q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wonci")
}],
"loop": false,
"name": &"flying",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_avk3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o558e")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4klqh"]
size = Vector2(112, 128)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7kt5p"]
size = Vector2(144, 160)

[node name="enemyBossMetalHen" type="CharacterBody2D" groups=["Persist", "enemies"]]
z_index = 1
texture_filter = 1
collision_layer = 0
floor_max_angle = 0.523599
script = ExtResource("1_uw6vv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5cx1g")
animation = &"walk"

[node name="AttackingTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="AttackedTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="DeadTimer" type="Timer" parent="AnimatedSprite2D"]
wait_time = 0.75
one_shot = true

[node name="Area2D" type="Area2D" parent="." groups=["enemies"]]
light_mask = 2
visibility_layer = 2
collision_layer = 6
collision_mask = 2
input_pickable = false
monitoring = false
monitorable = false

[node name="main_collision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_4klqh")

[node name="jumpTimer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7kt5p")

[node name="particle_limiter" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_tkw8o")

[node name="death" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_fmm6y")
volume_db = 5.0

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
modulate = Color(1, 1, 1, 0.0980392)
rect = Rect2(-500, -500, 1000, 1000)

[node name="flyCooldown" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 12.0
one_shot = true
autostart = true

[node name="flyEnd" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 8.0
one_shot = true

[connection signal="timeout" from="AnimatedSprite2D/AttackingTimer" to="." method="_on_attacking_timer_timeout"]
[connection signal="timeout" from="AnimatedSprite2D/AttackedTimer" to="." method="_on_attacked_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="jumpTimer" to="." method="_on_jump_timer_timeout"]
[connection signal="timeout" from="particle_limiter" to="." method="_on_particle_limiter_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="offScreen_load"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="offScreen_unload"]
[connection signal="timeout" from="flyCooldown" to="." method="_on_fly_cooldown_timeout"]
[connection signal="timeout" from="flyEnd" to="." method="_on_fly_end_timeout"]
